<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mahasagar.nanodegree.projectzero.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/txtColorTitle"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/strMainTitle"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnSpotifyStreamer"
                android:text="@string/strSpotifyStreamer"
                style="@style/MyNanoAppButtonStyle"/>
            <Button
                android:id="@+id/btnScoresApp"
                android:text="@string/strScoresApp"
                style="@style/MyNanoAppButtonStyle"/>
            <Button
                android:id="@+id/btnLibraryApp"
                android:text="@string/strLibraryApp"
                style="@style/MyNanoAppButtonStyle"/>
            <Button
                android:id="@+id/btnBuildItBigger"
                android:text="@string/strBuildItBigger"
                style="@style/MyNanoAppButtonStyle"/>
            <Button
                android:id="@+id/btnXYZReader"
                android:text="@string/strXYZReader"
                style="@style/MyNanoAppButtonStyle"/>
            <Button
                android:id="@+id/btnCapstone"
                android:text="@string/strCapstone"
                style="@style/MyOwnAppButtonStyle"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
